--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.3.1
+dj-database-url==0.5.0
 Django==3.1.3
 django-taggit==1.3.0
 django-tags-input==5.0.0
 Markdown==3.3.3
 Pillow==8.0.1
 psycopg2==2.8.6
+python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
